# video_to_frames

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/break_video_to_frames.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/videoToFrames/: __init__.py  __main__.py  breaker.py  config.toml
src/video_to_frame.egg-info/: PKG-INFO  SOURCES.txt
src/video_to_frames.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
